# x-MalConv2

./: .gitignore  Dockerfile  README.md  pyproject.toml
config/: .pre-commit-config.yaml  config.yaml
models/MalConv2-main/: AvastStyleConv.py  ContinueTraining.py  LowMemConv.py  MalConv.py  MalConvGCT_nocat.py  MalConvGCT_nocatTrain.py  MalConvML.py  MalConvTrain.py  OptunaTrain.py  __init__.py  binaryLoader.py
scripts/: precommit.sh
src/: __init__.py  adversarial_malware.py  compute_DeepShap.py  preprocess.py  utils.py
test/: run_shap_test.py  test.ipynb  test_pe.ipynb
